%%{init: {'theme': 'neutral'}}%%
erDiagram
    USER ||--o{ FILE : owns
    USER ||--o{ FOLDER : owns
    USER ||--o{ SECURITY_LOG : generates
    FOLDER ||--o{ FILE : contains
    FOLDER ||--o{ FOLDER : parent_of
    FILE ||--o{ SHARE_LINK : shares

    USER {
        string name
        string email
        string password
        string role
        number storageUsed
        number totalStorageLimit
        boolean twoFactorEnabled
        string twoFactorSecret
        string vaultSecret
        string vaultSalt
    }

    FILE {
        string filename
        string originalName
        string mimeType
        string s3Key
        number size
        boolean isDeleted
        boolean isEncrypted
        string iv
        string encryptionAlgorithm
        string authTag
        date createdAt
    }

    FOLDER {
        string name
        string parentFolder
        boolean isDeleted
        date createdAt
        date updatedAt
    }

    SHARE_LINK {
        string token
        string passwordHash
        date expiresAt
        number maxDownloads
        number downloadCount
        date createdAt
    }

    SECURITY_LOG {
        string action
        string details
        string ipAddress
        string userAgent
        date createdAt
    }
